# ros2_image_pub_sub

./: README.md
my_opencv_demo/: CMakeLists.txt  package.xml
my_opencv_demo/src/: my_sub.cpp
my_opencv_demo_interfaces/: CMakeLists.txt  package.xml
my_opencv_demo_interfaces/msg/: ImageWithTime.msg
src/my_opencv_demo/: CMakeLists.txt  package.xml
src/my_opencv_demo/src/: minimal_opencv_ros2_node.cpp  my_sub.cpp  shisen_pub.cpp
src/my_opencv_py/: package.xml  setup.cfg  setup.py
src/my_opencv_py/my_opencv_py/: ninshiki_py_detector.py
src/my_opencv_py/my_opencv_py/node/: ninshiki_py_node.py
src/shisen_interfaces/msg/: Image.msg
