<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_opencv_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nathanterbaik@gmail.com">nathanael</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-unittest2</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>my_opencv_demo_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ninshiki_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
